--- a/libraries/ArduinoJson/library.properties
+++ b/libraries/ArduinoJson/library.properties
@@ -1,8 +1,9 @@
 name=ArduinoJson
-version=4.0
-author=Benoit Blanchon <http://blog.benoitblanchon.fr/>
-maintainer=Benoit Blanchon <http://blog.benoitblanchon.fr/>
-sentence=An efficient and elegant JSON library for Arduino
-paragraph=Supports JSON parsing and formatting. Uses fixed memory allocation.
+version=5.8.2
+author=Benoit Blanchon <blog.benoitblanchon.fr>
+maintainer=Benoit Blanchon <blog.benoitblanchon.fr>
+sentence=An efficient and elegant JSON library for Arduino.
+paragraph=Like this project? Please star it on GitHub!
+category=Data Processing
 url=https://github.com/bblanchon/ArduinoJson
 architectures=*
